# TicTacToe

./: TicTacToe.cbp  TicTacToe.depend  TicTacToe.layout  main.c  meson.build
spacial/: point.h
src/: main.c  meson.build
src/ui/button/: button.c  button.h
src/ui/main_menu/: main_menu.cpp
ui/button/: button.c  button.h
ui/main_menu/: main_menu.c  main_menu.h
